--- a/client/templates/course/lesson/quiz/quiz-content.css
+++ b/client/templates/course/lesson/quiz/quiz-content.css
@@ -12,6 +12,10 @@
     margin-top: 7px;
 }
 
+.new-question-wrapper{
+    background-color: #f5f5de;
+}
+
 .form-group-sm {
     margin-bottom: 5px;
 }
