--- a/client/templates/course/lesson/quiz/quiz-content.html
+++ b/client/templates/course/lesson/quiz/quiz-content.html
@@ -51,6 +51,7 @@
 
                                 {{> afQuickField name="optionTitles"
                                     type="selector-with-text-input"
+                                    totalNumQuestions=numOfChoices
                                 }}
 
 
