added an option to delete questions from quiz

--- a/client/templates/course/lesson/quiz/quiz-content.html
+++ b/client/templates/course/lesson/quiz/quiz-content.html
@@ -21,7 +21,7 @@
             {{#if currentQuestionToBuild}}
                 <div class="col-sm-12 question-wrapper new-question-wrapper">
 
-                    {{>questionWrapper question=currentQeustionToBuild }}
+                    {{>questionWrapperTitle question=currentQeustionToBuild showDeleteButton=false}}
                     <br/>
 
                         {{#autoForm collection="Questions"
