--- a/client/templates/course/lesson/quiz/quiz-questions.html
+++ b/client/templates/course/lesson/quiz/quiz-questions.html
@@ -1,6 +1,7 @@
 <template name="quizQuestions">
     {{#each question in questions}}
         <div class="question-content col-sm-12 question-wrapper">
+            {{>questionWrapperTitle question=question showDeleteButton=true}}
             <div>{{question.title}}</div>
             <div> {{ question.questionType}}</div>
         </div>
