removed unused partials and js

--- a/client/templates/course/lesson/quiz/questions/autoform/afQuestionOptionsGroup.html
+++ b/client/templates/course/lesson/quiz/questions/autoform/afQuestionOptionsGroup.html
@@ -4,9 +4,7 @@
             <span class="radio-inline checkbox-inline">
                     {{#if isMultipleAnswer }}
                         <input type="checkbox"
-                               class="js-answer-option-checkbox"
-
-                        />
+                               class="js-answer-option-checkbox"/>
                     {{else}}
                         <input type="radio"
                                name="radioGroupName"
