--- a/client/templates/course/lesson/quiz/quiz-content.html
+++ b/client/templates/course/lesson/quiz/quiz-content.html
@@ -24,14 +24,21 @@
                     {{>questionWrapperTitle question=currentQeustionToBuild showDeleteButton=false}}
                     <br/>
 
-                        {{#autoForm collection="Questions"
-                        id="addQuestionForm"
-                        type="method" meteormethod="addSingleAnswerQuestion"
-                        resetOnSuccess=true}}
+                        {{#autoForm
+                            collection="Questions"
+                            id="addQuestionForm"
+                            type="method" meteormethod="addSingleAnswerQuestion"
+                            resetOnSuccess=true}}
+
                             <fieldset>
+
+                                <!-- common fields used in all types of questions -->
                                 {{> afQuickField name='title'}}
                                 {{> afQuickField name='description' rows=3}}
+                                {{> afQuickField name="questionType" value=qType  type="hidden"}}
 
+
+                                <!-- a dropdown selector to chose a number of answers -->
                                 {{#if isTrueOrFalse}}
                                     <!-- do not display a drop down -->
                                 {{else}}
@@ -40,9 +47,8 @@
                                     firstOption=" -- Select a number of options to chose from -- "}}
                                 {{/if}}
 
-                                {{> afQuickField name="questionType" value=qType  type="hidden"}}
-
-
+                                <!-- This is the part that gave me the most grief -->
+                                <!-- options layout for all three types of questions -->
                                 {{> afQuickField name="optionTitles"
                                     type="selector-with-text-input"
                                     questionType=selectedQuestionType
@@ -50,9 +56,8 @@
                                     validation="keyup"
                                 }}
 
-
-
                             </fieldset>
+
                             <button type="submit" class="btn btn-success">Add to quiz</button>
                             <button type="reset" class="btn btn-primary" id="cancelNewQuestionBtn">Cancel</button>
                         {{/autoForm}}
