--- a/client/templates/shared/course-card.html
+++ b/client/templates/shared/course-card.html
@@ -7,7 +7,7 @@
                 </a>
             </div>
             <div class="caption">
-              <a class="course-category" href="#">{{keywords.[0]}}</a>  
+              <a class="course-category" href="/learn/{{keywords.[0]}}">{{keywords.[0]}}</a>  
                 <h2 class="course-card-title">
                     <a href ="/course/{{ _id }}">{{ title }}</a>
                 </h2>
